@@ -1,5 +1,6 @@
 include_directories( ${KOFFICE_INCLUDE_DIR}
                      ${CMAKE_SOURCE_DIR}
+                     ${CMAKE_CURRENT_SOURCE_DIR}/..
                      ${CMAKE_BINARY_DIR}
                      ${KDE4_INCLUDES}
                      )
@@ -13,7 +14,7 @@ SET (geoshape_LIB_SRCS
     GeoToolFactory.cpp
     Plugin.cpp
 )
-#linker error with "undefined reference to `ViewParams::viewport()'"
+
 kde4_add_plugin(geoshape ${geoshape_LIB_SRCS})
 
 target_link_libraries(geoshape marblewidget ${KSTORE_LIBRARY} ${KOODF_LIBRARY} ${FLAKE_LIBRARY} ${KOGUIUTILS_LIBRARY} ${KOTEXT_LIBRARY} ${KOMAIN_LIBRARY})
